--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,51 @@
 body {
-  font-family: "Roboto", Arial, sans-serif;
-  color: #333;
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+}
+/* Логотип */
+.web-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.web-logo .logo-text {
+  color: #4d5ae5;
+}
+.web-logo .logo-studio {
+  color: #000000; /* чорний колір для Studio */
+}
+
+/* Навігаційні посилання */
+.nav-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+}
+.nav-link:hover,
+.nav-link:focus {
+  color: #404bbf;
+}
+
+/* Контакти */
+.contact-info {
+  font-style: normal;
+}
+.contact-link {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-decoration: none;
+}
+.contact-link:hover,
+.contact-link:focus {
+  color: #404bbf;
 }
