--- a/css/main.css
+++ b/css/main.css
@@ -77,3 +77,16 @@ a {
   background-color: #404bbf;
   cursor: pointer;
 }
+.advantages-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.advantages-item-title {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
