--- a/css/main.css
+++ b/css/main.css
@@ -77,14 +77,14 @@ a {
   background-color: #404bbf;
   cursor: pointer;
 }
-.advantages-title {
+.advantages-item-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.advantages-item-title {
+.advantages-item {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
