--- a/css/main.css
+++ b/css/main.css
@@ -115,3 +115,10 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
+.team-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
