--- a/css/main.css
+++ b/css/main.css
@@ -122,3 +122,23 @@ a {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.footer-main {
+  background-color: #2e2f42;
+}
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+.footer-span {
+  color: #f4f4fd;
+}
+.footer-title {
+  line-height: 1.5;
+  color: #f4f4fd;
+  letter-spacing: 0.02em;
+}
