--- a/css/main.css
+++ b/css/main.css
@@ -142,3 +142,21 @@ a {
   color: #f4f4fd;
   letter-spacing: 0.02em;
 }
+.section-title {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.portfolio-list {
+  width: 260;
+}
+.portfolio-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
