--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,9 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
+.our-portfolio {
+  color: #2e2f42;
+}
 .team-role {
   font-size: 16px;
   line-height: 1.5;
