--- a/css/styles.css
+++ b/css/styles.css
@@ -101,33 +101,41 @@ ul {
     color: #404bbf;
 }
 
-/* ===== MAIN SECTION STYLES ===== */
-.main-section {
+/* ===== HERO SECTION STYLES ===== */
+.hero-section {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
-.main-title {
+.hero-title {
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
+    max-width: 496px;
+    margin: 0 auto;
 }
 
-.main-button {
+.hero-button {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
     background-color: #4d5ae5;
+    border-radius: 4px;
+    cursor: pointer;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
-    border: none; /* Добавляем для кнопки */
-    cursor: pointer; /* Перенесем сюда из hover */
+    margin: 0 auto;
 }
 
-.main-button:hover,
-.main-button:focus {
+.hero-button:hover,
+.hero-button:focus {
     background-color: #404bbf;
 }
 
