--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,22 @@ img {
     width: calc((100% - 72px) / 4);
 }
 
+.features-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
+
+.features-icon-container img {
+    width: 64px;
+    height: 64px;
+}
+
 .features-title {
     font-weight: 500;
     font-size: 20px;
